add batch api and refactored
